# proyecto_tareas

backend-tareas/: README.md  pyproject.toml  test_connection.py
backend-tareas/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
backend-tareas/app/routers/: tareas.py
bbdd/: creacion_bbdd.sql  prueba.sql
