[project]
name = "backend-tareas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.128.7",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
